Table users {
  id int [pk, increment]
  username varchar [not null]
  name varchar [not null]
  type enum('CUSTOMER', 'DRIVER')
}

Table orders {
  id int [pk, increment]
  customer_id int [not null]
  driver_id int [null]
  status enum('PENDING', 'ACCEPTED', 'ON_COURSE', 'DELIVERIED')
  address varchar [not null]
  description varchar [not null]
  image_url varchar [not null]
}

Table locations {
  order_id int [not null]
  created_at timestamp [not null]
  latitude float [not null]
  longitude float [not null]

  Indexes {
    (order_id, created_at) [pk]
  }
}

Table notification_preferences {
  user_id int [not null]
  enabled boolean [not null]
}

Ref: orders.customer_id > users.id
Ref: orders.driver_id > users.id
Ref: locations.order_id > orders.id
Ref: notification_preferences.user_id > users.id